[gd_scene load_steps=3 format=3 uid="uid://djr4p0r8gmugq"]

[ext_resource type="Script" path="res://components/wall_break_component.gd" id="1_8s5bu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p5qte"]
radius = 20.0

[node name="WallBreakComponent" type="Area2D"]
script = ExtResource("1_8s5bu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p5qte")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
